--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MY SITE 101
+title: Azhar Khan
 email: azhar93@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: >- # this means to ignore newlines until "baseurl:
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://azkh93.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: azhar937
