--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,14 @@ markdown:         kramdown
 kramdown:
   extensions: ["tables"]
 
-highlighter:         true
+highlighter:         rouge
 
 # Permalinks
 permalink:        pretty
 
 # Setup
-title:            Azhar Khan
-tagline:          ''
+title:            Azhar
+tagline:          'Khan'
 url:              http://azkh93.github.io
 shorturl:
 
