--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -3,13 +3,13 @@ markdown:         kramdown
 kramdown:
   extensions: ["tables"]
 
-highlighter:         true
+highlighter:         rouge
 
 # Permalinks
 permalink:        pretty
 
 # Setup
-title:            Azhar Khan
+title:            Azhar
 tagline:          ''
 url:              http://localhost:4000
 shorturl:
