--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ permalink:        pretty
 
 # Setup
 title:            Azhar
-tagline:          'Khan'
+tagline:          'Just my 2 ¢ents'
 url:              http://azkh93.github.io
 shorturl:
 
@@ -30,11 +30,11 @@ github:
 pages_list:
   About: '/about/'
   Archive: '/archive/'
-  Feed: '/atom.xml'
+  Projects: '/projects/'
 
 # Allow URL Redirects:
 #  * https://help.github.com/articles/redirects-on-github-pages
-gems:
+plugins:
   - jekyll-redirect-from
   - jekyll-paginate
   - jekyll-gist
