--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ permalink:        pretty
 
 # Setup
 title:            Azhar
-tagline:          'Just my 2 ¢ents'
-url:              http://azkh93.github.io
+tagline:          'Just my 2 cents'
+url:              https://azharkhan.in
 shorturl:
 
 author:
