--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ pages_list:
   About: '/about/'
   Archive: '/archive/'
   Projects: '/projects/'
+  Resumé: '/resume/'
 
 # Allow URL Redirects:
 #  * https://help.github.com/articles/redirects-on-github-pages
