--- a/_config.yml
+++ b/_config.yml
@@ -1,41 +1,35 @@
 # Dependencies
 markdown:         kramdown
-kramdown:
-  extensions: ["tables"]
-
-highlighter:         rouge
-
-# Permalinks
-permalink:        pretty
+highlighter:      rouge
 
 # Setup
-title:            Azhar
+title:            Azhar Khan
 tagline:          'Just my 2 cents'
-url:              https://azharkhan.in
-shorturl:
+description:      "Data. Code. Design"
+url:              http://localhost:4000
+baseurl:
+                  # the optional subpath of your site, e.g. "/blog"
+                  # NB: This applies to all pages in your Jekyll site.
+                  # If you want to move just the blog index pages but keep
+                  # other pages at root, see the paginate_path and
+                  # sidebar_blog_link below.
 
 author:
   name:           'Azhar Khan'
   url:            https://twitter.com/azhar937
 
-paginate:         1
+paginate:         5
+# paginate_path:    '/page:num'
+                    # Or '/blog/page:num' if you want to move your index pages
 
-# Custom vars
-version:          1.0.0
-
-github:
-  repo:           https://github.com/azkh93/azkh93.github.io
-
-# This is the list of pages to include in the header of the website.
-pages_list:
-  About: '/about/'
-  Archive: '/archive/'
-  Projects: '/projects/'
-  Resumé: '/resume/'
-
-# Allow URL Redirects:
-#  * https://help.github.com/articles/redirects-on-github-pages
 plugins:
-  - jekyll-redirect-from
-  - jekyll-paginate
+  - jekyll-feed
   - jekyll-gist
+  - jekyll-paginate
+
+# Sidebar link settings
+sidebar_home_link:  true
+# sidebar_blog_link:  '/blog'   # By default, your home page is your blog
+                                # page. If you change your paginate_path,
+                                # set this to the root of the paginate_path
+                                # to enable a separate blog link.
