--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ highlighter:      rouge
 title:            Zoya Khan
 email:            cutezoe1996@gmail.com
 tagline:          'Stronger Better Faster'
-description:      "Data. Code. Design"
+description:      "ML Enthusiast"
 url:              https://azharkhan.in
 baseurl:
                   # the optional subpath of your site, e.g. "/blog"
