--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ markdown:         kramdown
 highlighter:      rouge
 
 # Setup
-title:            Zoya Khan
+title:            Hi! I'm Zoya Khan
 email:            cutezoe1996@gmail.com
 tagline:          'Stronger Better Faster'
 description:      "ML Enthusiast"
