--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ highlighter:      rouge
 # Setup
 title:            Hi! I'm Zoya!
 email:            cutezoe1996@gmail.com
-tagline:          'Stronger Better Faster'
+tagline:          'Stronger|Better|Faster'
 description:      "ML Enthusiast | Student | Full Stack Developer | Coder"
 url:              https://zeddmaxx.github.io/
 baseurl:
