--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ highlighter:      rouge
 title:            Hi! I'm Zoya!
 email:            cutezoe1996@gmail.com
 tagline:          'Stronger|Better|Faster'
-description:      "ML Enthusiast | Student | Full Stack Developer | Coder"
+description:      "Machine Learning Enthusiast| Student|Full Stack Developer|Coder"
 url:              https://zeddmaxx.github.io/
 baseurl:
                   # the optional subpath of your site, e.g. "/blog"
