--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@ highlighter:      rouge
 
 # Setup
 title:            Hi! I'm Zoya!
-email:            cutezoe1996@gmail.com
+email:            zoya1996k@gmail.com
 tagline:          'Stronger|Better|Faster'
-description:      "ML Enthusiast | Student | Coder| Arsenal Fan|"
+description:      "Machine Learning | Coder | Football Fan"
 url:              https://zeddmaxx.github.io/
 baseurl:
                   # the optional subpath of your site, e.g. "/blog"
