Updating config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ highlighter:      rouge
 title:            Hi! I'm Zoya!
 email:            zoya1996k@gmail.com
 tagline:          'Stronger|Better|Faster'
-description:      "Machine Learning | Coder | Football Fan"
+description:      "Software | ML | Algorithms | Football | Tennis"
 url:              https://zeddmaxx.github.io/
 baseurl:
                   # the optional subpath of your site, e.g. "/blog"
